--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "com.gary.mytweetapp"
+        applicationId "app.tweeting"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
