--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,31 +3,31 @@
     package="app.tweeting">
 
     <application
+        android:name="app.tweeting.TweetApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="TweetApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
-            android:name=".Welcome"
+            android:name="app.tweeting.Welcome"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Tweet"
-            android:label="@string/app_name" />
-        <activity
-            android:name=".Signup"
-            android:label="@string/app_name" />
-        <activity
-            android:name=".Login"
-            android:label="@string/app_name" />
 
+        <activity
+            android:name="app.tweeting.Tweet"
+            android:label="@string/app_name" />
+        <activity
+            android:name="app.tweeting.Signup"
+            android:label="@string/app_name" />
+        <activity
+            android:name="app.tweeting.Login"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
