--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="app.tweeting">
 
+    <!--USES PERMISSIONS-->
+
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
 
     <application
@@ -13,50 +15,78 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
+
+        <!--SPLASH SCREEN-->
+
         <activity
             android:name=".activities.SplashActivity"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+
+        <!--WELCOME SCREEN-->
+
         <activity
             android:name=".activities.WelcomeActivity"
-            android:label="Welcome">
-        </activity>
+            android:label="Welcome"
+            android:screenOrientation="portrait" />
+
+
+        <!--SIGNUP SCREEN-->
 
         <activity
             android:name=".activities.SignupActivity"
-            android:label="Signup">
-        </activity>
+            android:label="Signup"
+            android:screenOrientation="portrait" />
+
+
+        <!--LOGIN SCREEN-->
+
         <activity
             android:name=".activities.LoginActivity"
-            android:label="Login">
-        </activity>
+            android:label="Login"
+            android:screenOrientation="portrait" />
+
+
+        <!--TIMELINE SCREEN-->
+
         <activity
             android:name=".activities.TimelineActivity"
-            android:label="TimeLine" >
-        </activity>
+            android:label="TimeLine"
+            android:screenOrientation="portrait" />
+
+
+        <!--TWEETPAGER SCREEN-->
 
         <activity
             android:name=".activities.TweetPagerActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.TimelineActivity"/>
+                android:value=".activities.TimelineActivity" />
         </activity>
+
+
+        <!--SETTINGS SCREEN-->
+
         <activity
             android:name=".settings.SettingsActivity"
-            android:label="@string/settings" >
+            android:label="@string/settings"
+            android:screenOrientation="portrait">
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.TimelineActivity"/>
+                android:value=".activities.TimelineActivity" />
         </activity>
 
-    </application>
 
+    </application>
 </manifest>
