--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
         <activity
             android:name=".activities.WelcomeActivity"
-            android:label="Welcome"
+            android:label="Welcome Page"
             android:screenOrientation="portrait" />
 
 
@@ -42,7 +42,7 @@
 
         <activity
             android:name=".activities.SignupActivity"
-            android:label="Signup"
+            android:label="Signup Page"
             android:screenOrientation="portrait" />
 
 
@@ -50,7 +50,7 @@
 
         <activity
             android:name=".activities.LoginActivity"
-            android:label="Login"
+            android:label="Login Page"
             android:screenOrientation="portrait" />
 
 
@@ -58,7 +58,7 @@
 
         <activity
             android:name=".activities.TimelineActivity"
-            android:label="TimeLine"
+            android:label="TimeLine Page"
             android:screenOrientation="portrait" />
 
 
@@ -66,7 +66,7 @@
 
         <activity
             android:name=".activities.TweetActivity"
-            android:label="@string/app_name"
+            android:label="Tweet Page"
             android:screenOrientation="portrait">
 
             <meta-data
@@ -79,14 +79,13 @@
 
         <activity
             android:name=".activities.SettingsActivity"
-            android:label="@string/settings"
+            android:label="Settings Page"
             android:screenOrientation="portrait">
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.TimelineActivity" />
         </activity>
-
 
     </application>
 </manifest>
